Fix ignition ref print column for claim

--- a/config/crd/bases/metal.ironcore.dev_serverclaims.yaml
+++ b/config/crd/bases/metal.ironcore.dev_serverclaims.yaml
@@ -18,7 +18,7 @@ spec:
     - jsonPath: .spec.serverRef.name
       name: Server
       type: string
-    - jsonPath: .spec.ignitionRef.name
+    - jsonPath: .spec.ignitionSecretRef.name
       name: Ignition
       type: string
     - jsonPath: .spec.image
