upd according to review comments
Signed-off-by: Artem Bortnikov <artem.bortnikov@telekom.com>

--- a/config/crd/bases/metal.ironcore.dev_serverclaims.yaml
+++ b/config/crd/bases/metal.ironcore.dev_serverclaims.yaml
@@ -152,27 +152,25 @@ spec:
           status:
             description: ServerClaimStatus defines the observed state of ServerClaim.
             properties:
-              claimedServerRef:
-                description: |-
-                  ClaimedServerRef is a reference to a specific server which is claimed.
-                  This field is optional and can be omitted if the server is to be selected using ServerSelector.
-                properties:
-                  name:
-                    default: ""
-                    description: |-
-                      Name of the referent.
-                      This field is effectively required, but due to backwards compatibility is
-                      allowed to be empty. Instances of this type with an empty value here are
-                      almost certainly wrong.
-                      TODO: Add other useful fields. apiVersion, kind, uid?
-                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                      TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.
-                    type: string
-                type: object
-                x-kubernetes-map-type: atomic
               phase:
                 description: Phase represents the current phase of the server claim.
                 type: string
+              serverRef:
+                description: |-
+                  ServerRef is a reference to a specific server which is claimed.
+                  This field is optional and can be omitted if the server is to be selected using ServerSelector.
+                properties:
+                  name:
+                    description: Name is the name of the referenced entity.
+                    type: string
+                  uid:
+                    description: UID is the UID of the referenced entity.
+                    type: string
+                required:
+                - name
+                - uid
+                type: object
+                x-kubernetes-map-type: atomic
             type: object
         type: object
     served: true
