--- a/config/samples/metal_v1alpha1_bmcsecret.yaml
+++ b/config/samples/metal_v1alpha1_bmcsecret.yaml
@@ -8,5 +8,6 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: metal-operator
   name: bmcsecret-sample
-spec:
-  # TODO(user): Add fields here
+stringData:
+  username: foo
+  password: bar
