--- a/config/samples/metal_v1alpha1_server.yaml
+++ b/config/samples/metal_v1alpha1_server.yaml
@@ -9,4 +9,8 @@ metadata:
     app.kubernetes.io/created-by: metal-operator
   name: server-sample
 spec:
-  # TODO(user): Add fields here
+  uuid: "12345"
+  bmcRef:
+    name: sample-bmc
+  power: Off
+  indicatorLED: Blinking
