--- a/config/samples/metal_v1alpha1_serverbootconfiguration.yaml
+++ b/config/samples/metal_v1alpha1_serverbootconfiguration.yaml
@@ -9,4 +9,8 @@ metadata:
     app.kubernetes.io/created-by: metal-operator
   name: serverbootconfiguration-sample
 spec:
-  # TODO(user): Add fields here
+  serverRef:
+    name: server-sample
+  ignitionSecretRef:
+    name: my-ignition
+  image: os-image:latest
