--- a/config/crd/bases/metal.ironcore.dev_servers.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servers.yaml
@@ -68,15 +68,19 @@ spec:
             description: ServerSpec defines the desired state of a Server.
             properties:
               BIOS:
+                description: BIOS specifies the BIOS settings for the server.
                 items:
+                  description: BIOSSettings represents the BIOS settings for a server.
                   properties:
                     settings:
                       additionalProperties:
                         type: string
-                      description: maybe use map[string]intstr.IntOrString?!; interface
-                        not possible
+                      description: Settings is a map of key-value pairs representing
+                        the BIOS settings.
                       type: object
                     version:
+                      description: Version specifies the version of the server BIOS
+                        for which the settings are defined.
                       type: string
                   required:
                   - version
@@ -198,13 +202,18 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               bootOrder:
+                description: BootOrder specifies the boot order of the server.
                 items:
+                  description: BootOrder represents the boot order of the server.
                   properties:
                     device:
+                      description: Device is the device to boot from.
                       type: string
                     name:
+                      description: Name is the name of the boot device.
                       type: string
                     priority:
+                      description: Priority is the priority of the boot device.
                       type: integer
                   required:
                   - device
@@ -275,14 +284,17 @@ spec:
             description: ServerStatus defines the observed state of Server.
             properties:
               BIOS:
+                description: BIOSSettings represents the BIOS settings for a server.
                 properties:
                   settings:
                     additionalProperties:
                       type: string
-                    description: maybe use map[string]intstr.IntOrString?!; interface
-                      not possible
+                    description: Settings is a map of key-value pairs representing
+                      the BIOS settings.
                     type: object
                   version:
+                    description: Version specifies the version of the server BIOS
+                      for which the settings are defined.
                     type: string
                 required:
                 - version
