--- a/config/dev/kustomization.yaml
+++ b/config/dev/kustomization.yaml
@@ -1,5 +1,14 @@
 resources:
 - ../default
+- ../redfish-mockup
+- registry_service.yaml
 
 patches:
 - path: delete_manager_auth_proxy_patch.yaml
+- path: manager_patch.yaml
+
+secretGenerator:
+- name: macdb
+  namespace: metal-operator-system
+  files:
+  - macdb.yaml
