fix double printed name type

--- a/config/crd/bases/metal.ironcore.dev_bmcs.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcs.yaml
@@ -19,7 +19,7 @@ spec:
       name: MACAddress
       type: string
     - jsonPath: .status.ip
-      name: MACAddress
+      name: IP
       type: string
     - jsonPath: .status.model
       name: Model
