--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -34,6 +34,7 @@ rules:
   - bmcs
   - bmcsecrets
   - endpoints
+  - serverbioses
   - serverbootconfigurations
   - serverclaims
   - serverconfigurations
@@ -52,6 +53,7 @@ rules:
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - endpoints/finalizers
+  - serverbioses/finalizers
   - serverbootconfigurations/finalizers
   - serverclaims/finalizers
   - servers/finalizers
@@ -63,6 +65,7 @@ rules:
   - bmcs/status
   - bmcsecrets/status
   - endpoints/status
+  - serverbioses/status
   - serverbootconfigurations/status
   - serverclaims/status
   - servers/status
