--- a/config/crd/bases/metal.ironcore.dev_bmcs.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcs.yaml
@@ -70,6 +70,21 @@ spec:
           spec:
             description: BMCSpec defines the desired state of BMC
             properties:
+              access:
+                description: |-
+                  Endpoint allows inline configuration of network access details for the BMC.
+                  Use this field if access settings like address are to be configured directly within the BMC resource.
+                properties:
+                  ip:
+                    description: IP is the IP address of the BMC.
+                    type: string
+                  macAddress:
+                    description: MACAddress is the MAC address of the endpoint.
+                    type: string
+                required:
+                - ip
+                - macAddress
+                type: object
               bmcSecretRef:
                 description: |-
                   BMCSecretRef is a reference to the Kubernetes Secret object that contains the credentials
@@ -144,7 +159,6 @@ spec:
                 type: object
             required:
             - bmcSecretRef
-            - endpointRef
             - protocol
             type: object
           status:
