--- a/config/crd/bases/metal.ironcore.dev_servers.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servers.yaml
@@ -420,6 +420,10 @@ spec:
                               device in bytes.
                             pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                             x-kubernetes-int-or-string: true
+                          mediaType:
+                            description: MediaType specifies the media type of the
+                              storage device.
+                            type: string
                           model:
                             description: Model specifies the model of the storage
                               device.
@@ -427,10 +431,6 @@ spec:
                           name:
                             description: Name is the name of the storage interface.
                             type: string
-                          rotational:
-                            description: Rotational specifies whether the storage
-                              device is rotational.
-                            type: boolean
                           state:
                             description: State specifies the state of the storage
                               device.
