--- a/config/crd/bases/metal.ironcore.dev_servers.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servers.yaml
@@ -70,7 +70,7 @@ spec:
           spec:
             description: ServerSpec defines the desired state of a Server.
             properties:
-              biOSSettingsRef:
+              biosSettingsRef:
                 description: BIOSSettingsRef is a reference to a ServerBIOS object.
                 properties:
                   name:
