--- a/config/crd/bases/metal.ironcore.dev_bmcs.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcs.yaml
@@ -85,6 +85,9 @@ spec:
                 - ip
                 - macAddress
                 type: object
+                x-kubernetes-validations:
+                - message: access is immutable
+                  rule: self == oldSelf
               bmcSecretRef:
                 description: |-
                   BMCSecretRef is a reference to the Kubernetes Secret object that contains the credentials
@@ -137,6 +140,9 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+                x-kubernetes-validations:
+                - message: endpointRef is immutable
+                  rule: self == oldSelf
               protocol:
                 description: |-
                   Protocol specifies the protocol to be used for communicating with the BMC.
@@ -161,6 +167,9 @@ spec:
             - bmcSecretRef
             - protocol
             type: object
+            x-kubernetes-validations:
+            - message: exactly one of access or endpointRef needs to be set
+              rule: has(self.access) != has(self.endpointRef)
           status:
             description: BMCStatus defines the observed state of BMC.
             properties:
