--- a/config/crd/bases/metal.ironcore.dev_serverclaims.yaml
+++ b/config/crd/bases/metal.ironcore.dev_serverclaims.yaml
@@ -93,6 +93,9 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+                x-kubernetes-validations:
+                - message: serverRef is immutable
+                  rule: self == oldSelf
               serverSelector:
                 description: |-
                   ServerSelector specifies a label selector to identify the server to be claimed.
@@ -141,10 +144,18 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+                x-kubernetes-validations:
+                - message: serverSelector is immutable
+                  rule: self == oldSelf
             required:
             - image
             - power
             type: object
+            x-kubernetes-validations:
+            - message: serverRef is required once set
+              rule: '!has(oldSelf.serverRef) || has(self.serverRef)'
+            - message: serverSelector is required once set
+              rule: '!has(oldSelf.serverSelector) || has(self.serverSelector)'
           status:
             description: ServerClaimStatus defines the observed state of ServerClaim.
             properties:
