--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -20,7 +20,7 @@ resources:
 - ../manager
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
-- ../webhook
+# - ../webhook
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'. 'WEBHOOK' components are required.
 - ../certmanager
 # [PROMETHEUS] To enable prometheus monitor, uncomment all sections with 'PROMETHEUS'.
@@ -39,7 +39,7 @@ patches:
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'.
 # Uncomment 'CERTMANAGER' sections in crd/kustomization.yaml to enable the CA injection in the admission webhooks.
 # 'CERTMANAGER' needs to be enabled to use ca injection
-- path: webhookcainjection_patch.yaml
+# - path: webhookcainjection_patch.yaml
 
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER' prefix.
 # Uncomment the following replacements to add the cert-manager CA injection annotations
@@ -106,37 +106,37 @@ replacements:
           delimiter: '/'
           index: 1
           create: true
-  - source: # Add cert-manager annotation to the webhook Service
-      kind: Service
-      version: v1
-      name: webhook-service
-      fieldPath: .metadata.name # namespace of the service
-    targets:
-      - select:
-          kind: Certificate
-          group: cert-manager.io
-          version: v1
-        fieldPaths:
-          - .spec.dnsNames.0
-          - .spec.dnsNames.1
-        options:
-          delimiter: '.'
-          index: 0
-          create: true
-  - source:
-      kind: Service
-      version: v1
-      name: webhook-service
-      fieldPath: .metadata.namespace # namespace of the service
-    targets:
-      - select:
-          kind: Certificate
-          group: cert-manager.io
-          version: v1
-        fieldPaths:
-          - .spec.dnsNames.0
-          - .spec.dnsNames.1
-        options:
-          delimiter: '.'
-          index: 1
-          create: true
+  # - source: # Add cert-manager annotation to the webhook Service
+  #     kind: Service
+  #     version: v1
+  #     name: webhook-service
+  #     fieldPath: .metadata.name # namespace of the service
+  #   targets:
+  #     - select:
+  #         kind: Certificate
+  #         group: cert-manager.io
+  #         version: v1
+  #       fieldPaths:
+  #         - .spec.dnsNames.0
+  #         - .spec.dnsNames.1
+  #       options:
+  #         delimiter: '.'
+  #         index: 0
+  #         create: true
+  # - source:
+  #     kind: Service
+  #     version: v1
+  #     name: webhook-service
+  #     fieldPath: .metadata.namespace # namespace of the service
+  #   targets:
+  #     - select:
+  #         kind: Certificate
+  #         group: cert-manager.io
+  #         version: v1
+  #       fieldPaths:
+  #         - .spec.dnsNames.0
+  #         - .spec.dnsNames.1
+  #       options:
+  #         delimiter: '.'
+  #         index: 1
+  #         create: true
