--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -24,7 +24,10 @@ resources:
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'. 'WEBHOOK' components are required.
 # - ../certmanager
 # [PROMETHEUS] To enable prometheus monitor, uncomment all sections with 'PROMETHEUS'.
-#- ../prometheus
+# - ../prometheus
+# [REMOTE-CLUSTER] To configure the operator against a remote cluster, uncomment all sections with 'REMOTE-CLUSTER'.
+# Another patch is necesscary to inject the remote kubeconfig into the secret.
+# - remote_kubeconfig.yaml
 
 patches:
 # Protect the /metrics endpoint by putting it behind auth.
@@ -34,7 +37,11 @@ patches:
 
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
-- path: manager_webhook_patch.yaml
+# - path: manager_webhook_patch.yaml
+
+# [REMOTE-CLUSTER] To configure the operator against a remote cluster, uncomment all sections with 'REMOTE-CLUSTER'.
+# Another patch is necesscary to inject the remote kubeconfig into the secret.
+# - path: manager_remote_patch.yaml
 
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'.
 # Uncomment 'CERTMANAGER' sections in crd/kustomization.yaml to enable the CA injection in the admission webhooks.
