--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,8 @@ nav:
   - Local Setup: development/dev_setup.md
   - Documentation: development/dev_docs.md
 - API Reference: api-reference/api.md
+- Usage: 
+  - Metalctl: usage/metalctl.md
 
 extra:
   social:
