--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 - bases/metal.ironcore.dev_servers.yaml
 - bases/metal.ironcore.dev_serverbootconfigurations.yaml
 - bases/metal.ironcore.dev_serverclaims.yaml
+- bases/metal.ironcore.dev_servermaintenances.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
