--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,17 +14,21 @@ theme:
   logo: https://raw.githubusercontent.com/ironcore-dev/ironcore/main/docs/assets/logo.svg
   favicon: https://raw.githubusercontent.com/ironcore-dev/ironcore/main/docs/assets/favicon/favicon.ico
   palette:
+  - media: "(prefers-color-scheme)"
+    toggle:
+      icon: material/brightness-auto
+      name: Switch to light mode
   - media: "(prefers-color-scheme: light)"
     scheme: default
     primary: white
     toggle:
-      icon: material/weather-night
+      icon: material/brightness-7
       name: Switch to dark mode
   - media: "(prefers-color-scheme: dark)"
     scheme: slate
     primary: black
     toggle:
-      icon: material/weather-sunny
+      icon: material/brightness-4
       name: Switch to light mode
   font:
     text: 'Work Sans'
@@ -41,10 +45,6 @@ markdown_extensions:
       format: !!python/name:pymdownx.superfences.fence_code_format
 - pymdownx.snippets
 - codehilite
-- admonition
-- abbr
-- toc:
-    permalink: true
 
 nav:
 - Home: README.md
