Drop `kube-rbac-proxy` container and adopt controller-runtime native authn/authz for metrics

--- a/config/certmanager/kustomization.yaml
+++ b/config/certmanager/kustomization.yaml
@@ -1,5 +1,7 @@
 resources:
-- certificate.yaml
+- issuer.yaml
+- certificate-metrics.yaml
+- certificate-webhook.yaml
 
 configurations:
 - kustomizeconfig.yaml
