--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -20,17 +20,33 @@ resources:
 - ../manager
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
-- ../webhook
+# - ../webhook
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'. 'WEBHOOK' components are required.
 - ../certmanager
 # [PROMETHEUS] To enable prometheus monitor, uncomment all sections with 'PROMETHEUS'.
-#- ../prometheus
+- ../prometheus
+# [METRICS] Expose the controller manager metrics service.
+- metrics_service.yaml
 
 patches:
-# Protect the /metrics endpoint by putting it behind auth.
-# If you want your controller-manager to expose the /metrics
-# endpoint w/o any authn/z, please comment the following line.
-- path: manager_auth_proxy_patch.yaml
+# [METRICS] The following patch will enable the metrics endpoint using HTTPS and the port :8443.
+# More info: https://book.kubebuilder.io/reference/metrics
+- path: manager_metrics_patch.yaml
+  target:
+    kind: Deployment
+
+#  --registry-url and --probe-os-image are mandatory flags.
+# The following patch will add value for above flags
+- path: manager_args_patch.yaml
+  target:
+    kind: Deployment
+
+# Uncomment the patches line if you enable Metrics and CertManager
+# [METRICS-WITH-CERTS] To enable metrics protected with certManager, uncomment the following line.
+# This patch will protect the metrics with certManager self-signed certs.
+- path: cert_metrics_manager_patch.yaml
+  target:
+   kind: Deployment
 
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
@@ -39,104 +55,104 @@ patches:
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'.
 # Uncomment 'CERTMANAGER' sections in crd/kustomization.yaml to enable the CA injection in the admission webhooks.
 # 'CERTMANAGER' needs to be enabled to use ca injection
-- path: webhookcainjection_patch.yaml
+# - path: webhookcainjection_patch.yaml
 
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER' prefix.
 # Uncomment the following replacements to add the cert-manager CA injection annotations
-replacements:
-  - source: # Add cert-manager annotation to ValidatingWebhookConfiguration, MutatingWebhookConfiguration and CRDs
-      kind: Certificate
-      group: cert-manager.io
-      version: v1
-      name: serving-cert # this name should match the one in certificate.yaml
-      fieldPath: .metadata.namespace # namespace of the certificate CR
-    targets:
-      - select:
-          kind: ValidatingWebhookConfiguration
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: '/'
-          index: 0
-          create: true
-      - select:
-          kind: MutatingWebhookConfiguration
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: '/'
-          index: 0
-          create: true
-      - select:
-          kind: CustomResourceDefinition
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: '/'
-          index: 0
-          create: true
-  - source:
-      kind: Certificate
-      group: cert-manager.io
-      version: v1
-      name: serving-cert # this name should match the one in certificate.yaml
-      fieldPath: .metadata.name
-    targets:
-      - select:
-          kind: ValidatingWebhookConfiguration
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: '/'
-          index: 1
-          create: true
-      - select:
-          kind: MutatingWebhookConfiguration
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: '/'
-          index: 1
-          create: true
-      - select:
-          kind: CustomResourceDefinition
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: '/'
-          index: 1
-          create: true
-  - source: # Add cert-manager annotation to the webhook Service
-      kind: Service
-      version: v1
-      name: webhook-service
-      fieldPath: .metadata.name # namespace of the service
-    targets:
-      - select:
-          kind: Certificate
-          group: cert-manager.io
-          version: v1
-        fieldPaths:
-          - .spec.dnsNames.0
-          - .spec.dnsNames.1
-        options:
-          delimiter: '.'
-          index: 0
-          create: true
-  - source:
-      kind: Service
-      version: v1
-      name: webhook-service
-      fieldPath: .metadata.namespace # namespace of the service
-    targets:
-      - select:
-          kind: Certificate
-          group: cert-manager.io
-          version: v1
-        fieldPaths:
-          - .spec.dnsNames.0
-          - .spec.dnsNames.1
-        options:
-          delimiter: '.'
-          index: 1
-          create: true
+# replacements:
+#   - source: # Add cert-manager annotation to ValidatingWebhookConfiguration, MutatingWebhookConfiguration and CRDs
+#       kind: Certificate
+#       group: cert-manager.io
+#       version: v1
+#       name: serving-cert # this name should match the one in certificate.yaml
+#       fieldPath: .metadata.namespace # namespace of the certificate CR
+#     targets:
+#       - select:
+#           kind: ValidatingWebhookConfiguration
+#         fieldPaths:
+#           - .metadata.annotations.[cert-manager.io/inject-ca-from]
+#         options:
+#           delimiter: '/'
+#           index: 0
+#           create: true
+#       - select:
+#           kind: MutatingWebhookConfiguration
+#         fieldPaths:
+#           - .metadata.annotations.[cert-manager.io/inject-ca-from]
+#         options:
+#           delimiter: '/'
+#           index: 0
+#           create: true
+#       - select:
+#           kind: CustomResourceDefinition
+#         fieldPaths:
+#           - .metadata.annotations.[cert-manager.io/inject-ca-from]
+#         options:
+#           delimiter: '/'
+#           index: 0
+#           create: true
+#   - source:
+#       kind: Certificate
+#       group: cert-manager.io
+#       version: v1
+#       name: serving-cert # this name should match the one in certificate.yaml
+#       fieldPath: .metadata.name
+#     targets:
+#       - select:
+#           kind: ValidatingWebhookConfiguration
+#         fieldPaths:
+#           - .metadata.annotations.[cert-manager.io/inject-ca-from]
+#         options:
+#           delimiter: '/'
+#           index: 1
+#           create: true
+#       - select:
+#           kind: MutatingWebhookConfiguration
+#         fieldPaths:
+#           - .metadata.annotations.[cert-manager.io/inject-ca-from]
+#         options:
+#           delimiter: '/'
+#           index: 1
+#           create: true
+#       - select:
+#           kind: CustomResourceDefinition
+#         fieldPaths:
+#           - .metadata.annotations.[cert-manager.io/inject-ca-from]
+#         options:
+#           delimiter: '/'
+#           index: 1
+#           create: true
+#   - source: # Add cert-manager annotation to the webhook Service
+#       kind: Service
+#       version: v1
+#       name: webhook-service
+#       fieldPath: .metadata.name # namespace of the service
+#     targets:
+#       - select:
+#           kind: Certificate
+#           group: cert-manager.io
+#           version: v1
+#         fieldPaths:
+#           - .spec.dnsNames.0
+#           - .spec.dnsNames.1
+#         options:
+#           delimiter: '.'
+#           index: 0
+#           create: true
+#   - source:
+#       kind: Service
+#       version: v1
+#       name: webhook-service
+#       fieldPath: .metadata.namespace # namespace of the service
+#     targets:
+#       - select:
+#           kind: Certificate
+#           group: cert-manager.io
+#           version: v1
+#         fieldPaths:
+#           - .spec.dnsNames.0
+#           - .spec.dnsNames.1
+#         options:
+#           delimiter: '.'
+#           index: 1
+#           create: true
