--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -18,3 +18,26 @@ resources:
 - metrics_auth_role.yaml
 - metrics_auth_role_binding.yaml
 - metrics_reader_role.yaml
+# For each CRD, "Admin", "Editor" and "Viewer" roles are scaffolded by
+# default, aiding admins in cluster management. Those roles are
+# not used by the {{ .ProjectName }} itself. You can comment the following lines
+# if you do not want those helpers be installed with your Project.
+- serverclaim_admin_role.yaml
+- serverclaim_editor_role.yaml
+- serverclaim_viewer_role.yaml
+- serverbootconfiguration_admin_role.yaml
+- serverbootconfiguration_editor_role.yaml
+- serverbootconfiguration_viewer_role.yaml
+- server_admin_role.yaml
+- server_editor_role.yaml
+- server_viewer_role.yaml
+- bmc_admin_role.yaml
+- bmc_editor_role.yaml
+- bmc_viewer_role.yaml
+- bmcsecret_admin_role.yaml
+- bmcsecret_editor_role.yaml
+- bmcsecret_viewer_role.yaml
+- endpoint_admin_role.yaml
+- endpoint_editor_role.yaml
+- endpoint_viewer_role.yaml
+
