--- a/config/rbac/endpoint_admin_role.yaml
+++ b/config/rbac/endpoint_admin_role.yaml
@@ -1,9 +1,9 @@
 # This rule is not used by the project metal-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants read-only access to metal.ironcore.dev resources.
-# This role is intended for users who need visibility into these resources
-# without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
+# Grants full permissions ('*') over metal.ironcore.dev.
+# This role is intended for users authorized to modify roles and bindings within the cluster,
+# enabling them to delegate specific permissions to other users or groups as needed.
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -11,19 +11,17 @@ metadata:
   labels:
     app.kubernetes.io/name: metal-operator
     app.kubernetes.io/managed-by: kustomize
-  name: server-viewer-role
+  name: endpoint-admin-role
 rules:
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - servers
+  - endpoints
   verbs:
-  - get
-  - list
-  - watch
+  - '*'
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - servers/status
+  - endpoints/status
   verbs:
   - get
