--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -2,11 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/name: serviceaccount
-    app.kubernetes.io/instance: controller-manager-sa
-    app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: metal-operator
-    app.kubernetes.io/part-of: metal-operator
+    app.kubernetes.io/name: metal-operator
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager
   namespace: system
