--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
 - metal_v1alpha1_server.yaml
 - metal_v1alpha1_serverbootconfiguration.yaml
 - metal_v1alpha1_serverclaim.yaml
+- metal_v1alpha1_account.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
