Create CRD and Controller to handle bios settings

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - bases/metal.ironcore.dev_serverbootconfigurations.yaml
 - bases/metal.ironcore.dev_serverclaims.yaml
 - bases/metal.ironcore.dev_servermaintenances.yaml
+- bases/metal.ironcore.dev_serverbios.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
