--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -34,6 +34,7 @@ rules:
   - bmcs
   - bmcsecrets
   - endpoints
+  - serverbios
   - serverbootconfigurations
   - serverclaims
   - serverconfigurations
@@ -53,6 +54,7 @@ rules:
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - endpoints/finalizers
+  - serverbios/finalizers
   - serverbootconfigurations/finalizers
   - serverclaims/finalizers
   - servermaintenances/finalizers
@@ -65,6 +67,7 @@ rules:
   - bmcs/status
   - bmcsecrets/status
   - endpoints/status
+  - serverbios/status
   - serverbootconfigurations/status
   - serverclaims/status
   - servermaintenances/status
