adds rbac roles; fixes test

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -37,6 +37,7 @@ rules:
   - serverbootconfigurations
   - serverclaims
   - serverconfigurations
+  - servermaintenances
   - servers
   verbs:
   - create
@@ -54,6 +55,7 @@ rules:
   - endpoints/finalizers
   - serverbootconfigurations/finalizers
   - serverclaims/finalizers
+  - servermaintenances/finalizers
   - servers/finalizers
   verbs:
   - update
@@ -65,6 +67,7 @@ rules:
   - endpoints/status
   - serverbootconfigurations/status
   - serverclaims/status
+  - servermaintenances/status
   - servers/status
   verbs:
   - get
