--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -34,7 +34,7 @@ rules:
   - bmcs
   - bmcsecrets
   - endpoints
-  - serverbios
+  - serverbioses
   - serverbootconfigurations
   - serverclaims
   - serverconfigurations
@@ -54,7 +54,7 @@ rules:
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - endpoints/finalizers
-  - serverbios/finalizers
+  - serverbioses/finalizers
   - serverbootconfigurations/finalizers
   - serverclaims/finalizers
   - servermaintenances/finalizers
@@ -67,7 +67,7 @@ rules:
   - bmcs/status
   - bmcsecrets/status
   - endpoints/status
-  - serverbios/status
+  - serverbioses/status
   - serverbootconfigurations/status
   - serverclaims/status
   - servermaintenances/status
