Add `MaintenanceReconciler` implementation  (#265)
* implements maintenance controller

* fixes lint errors

* adds missing license info to maintenance controller

* minor refactoring

* uses server/serverclaim watches

* fixes review comments

* adds rbac roles; fixes test

* enhances test with multiple maintenance objects

* fixes enqueueMaintenanceByServerRefs

* fixes lint errors

* updates server reconciliation logic to handle ServerClaimRef state transitions

* rebase main; fixes linting errors

* renames createServerBootConfiguration func

---------

Co-authored-by: Stefan Hipfel <stefan@Mac.fritz.box>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -38,6 +38,7 @@ rules:
   - serverbootconfigurations
   - serverclaims
   - serverconfigurations
+  - servermaintenances
   - servers
   verbs:
   - create
@@ -56,6 +57,7 @@ rules:
   - endpoints/finalizers
   - serverbootconfigurations/finalizers
   - serverclaims/finalizers
+  - servermaintenances/finalizers
   - servers/finalizers
   verbs:
   - update
@@ -68,6 +70,7 @@ rules:
   - endpoints/status
   - serverbootconfigurations/status
   - serverclaims/status
+  - servermaintenances/status
   - servers/status
   verbs:
   - get
